refactored for organistation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 </head>
 
 <body>
+    <script src="config.js"></script>
+    <script src="RoomGeometry.js"></script>
+    <script src="PressureField.js"></script>
+    <script src="WaveSource.js"></script>
     <script src="waveSimulation.js"></script>
     <script src="sketch.js"></script>
 </body>
