--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
 </head>
 
 <body>
+    <!-- Load configuration first -->
     <script src="config.js"></script>
+
+    <!-- Load core simulation classes in dependency order -->
+    <script src="Signal.js"></script>
     <script src="RoomGeometry.js"></script>
     <script src="PressureField.js"></script>
     <script src="WaveSource.js"></script>
     <script src="waveSimulation.js"></script>
+
+    <!-- Load main sketch last -->
     <script src="sketch.js"></script>
 </body>
 
