--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
             background: #1a1a1a;
             position: relative;
             border-right: 1px solid #333;
+            flex-shrink: 0;
         }
 
         #simulation-container {
-            flex: 1;
-            height: 100vh;
+            width: 800px;
+            height: 600px;
+            margin: auto;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -43,6 +45,8 @@
 
         canvas {
             border: none;
+            width: 800px !important;
+            height: 600px !important;
         }
 
         #imgui-container {
@@ -57,6 +61,16 @@
             position: absolute;
             top: 0;
             left: 0;
+            width: 100% !important;
+            height: 100% !important;
+        }
+
+        .wrapper {
+            display: flex;
+            width: 100%;
+            height: 100vh;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
@@ -67,8 +81,10 @@
         <div id="imgui-container"></div>
     </div>
 
-    <!-- Right side - Simulation -->
-    <div id="simulation-container"></div>
+    <!-- Right side - Simulation wrapper -->
+    <div class="wrapper">
+        <div id="simulation-container"></div>
+    </div>
 
     <!-- Load configuration first -->
     <script src="config.js"></script>
