--- a/index.html
+++ b/index.html
@@ -34,19 +34,26 @@
         }
 
         #simulation-container {
-            width: 800px;
-            height: 600px;
-            margin: auto;
+            flex: 1;
+            height: 100vh;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             background: #000;
+            overflow: hidden;
+            position: relative;
+            width: 100%;
         }
 
         canvas {
             border: none;
-            width: 800px !important;
-            height: 600px !important;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100% !important;
+            height: 100% !important;
+            object-fit: contain;
         }
 
         #imgui-container {
@@ -67,10 +74,9 @@
 
         .wrapper {
             display: flex;
-            width: 100%;
+            flex: 1;
             height: 100vh;
-            align-items: center;
-            justify-content: center;
+            background: #000;
         }
     </style>
 </head>
