global params file

--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
     </div>
 
     <!-- Load configuration first -->
-    <script src="config.js"></script>
+    <script src="src/config/params.js"></script>
 
     <!-- Load core simulation classes in dependency order -->
-    <script src="Signal.js"></script>
-    <script src="RoomGeometry.js"></script>
-    <script src="PressureField.js"></script>
-    <script src="WaveSource.js"></script>
-    <script src="waveSimulation.js"></script>
+    <script src="src/core/Signal.js"></script>
+    <script src="src/core/RoomGeometry.js"></script>
+    <script src="src/core/PressureField.js"></script>
+    <script src="src/core/WaveSource.js"></script>
+    <script src="src/core/waveSimulation.js"></script>
 
     <!-- Load GUI and sketch last -->
-    <script src="gui.js"></script>
-    <script src="sketch.js"></script>
+    <script src="src/ui/gui.js"></script>
+    <script src="src/ui/sketch.js"></script>
 </body>
 
 </html>
