mid refactor. trying to separate concerns of igui, rendering and simulation

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <script src="src/core/PressureField.js"></script>
     <script src="src/core/WaveSource.js"></script>
     <script src="src/core/waveSimulation.js"></script>
+    <script src="src/core/SimulationManager.js"></script>
 
     <!-- Load GUI and sketch last -->
     <script src="src/ui/gui.js"></script>
