--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Wave Propagation Simulation</title>
 
-    <!-- p5.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-
     <!-- ImGui -->
     <script src="imgui-js/dist/imgui.umd.js"></script>
     <script src="imgui-js/dist/imgui_impl.umd.js"></script>
@@ -105,13 +102,18 @@
     <script src="src/core/RoomGeometry.js"></script>
     <script src="src/core/PressureField.js"></script>
     <script src="src/core/WaveSource.js"></script>
-    <script src="src/core/waveSimulation.js"></script>
-    <script src="src/core/SimulationManager.js"></script>
-    <script src="src/core/AppManager.js"></script>
 
-    <!-- Load GUI and sketch last -->
+    <!-- Load new architecture components -->
+    <script src="src/core/PhysicsEngine.js"></script>
+    <script src="src/ui/Renderer.js"></script>
+    <script src="src/ui/InputHandler.js"></script>
+    <script src="src/core/SimulationApp.js"></script>
+
+    <!-- Load GUI -->
     <script src="src/ui/gui.js"></script>
-    <script src="src/ui/sketch.js"></script>
+
+    <!-- Load main entry point -->
+    <script src="src/ui/main.js"></script>
 </body>
 
 </html>
