--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Wave Propagation Simulation</title>
 
-    <!-- ImGui -->
-    <script src="imgui-js/dist/imgui.umd.js"></script>
-    <script src="imgui-js/dist/imgui_impl.umd.js"></script>
+    <!-- Tweakpane -->
+    <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.10/dist/tweakpane.min.js"></script>
 
     <style>
         body {
@@ -46,7 +45,6 @@
         }
 
         canvas {
-            border: none;
             position: absolute;
             top: 0;
             left: 0;
@@ -55,23 +53,16 @@
             object-fit: contain;
         }
 
-        #imgui-container {
+        #pane-container {
             position: absolute;
             top: 0;
             left: 0;
             width: 400px;
             height: 100%;
-            z-index: 20; /* Ensure ImGui is on top */
-            pointer-events: auto; /* Explicitly enable pointer events */
-        }
-
-        #imgui-container canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100% !important;
-            height: 100% !important;
-            pointer-events: auto; /* Explicitly enable pointer events */
+            z-index: 20;
+            pointer-events: auto;
+            overflow-y: auto;
+            padding: 10px;
         }
 
         .wrapper {
@@ -86,7 +77,7 @@
 <body>
     <!-- Left side - Controls -->
     <div id="controls-container">
-        <div id="imgui-container"></div>
+        <div id="pane-container"></div>
     </div>
 
     <!-- Right side - Simulation wrapper -->
